@startuml Modelo Fisico Base de Datos - Sistema de Ingreso Docente

!define TABLE(x) class x << (T,#FFAAAA) >>
!define PK(x) <b><color:red>x</color></b>
!define FK(x) <color:blue>x</color>
!define UK(x) <color:green>x</color>
!define NN(x) <color:purple>x</color>

' Configuración del diagrama
skinparam linetype ortho
skinparam nodesep 100
skinparam ranksep 100
skinparam classAttributeIconSize 0

' ==================== TABLAS ====================

TABLE(usuarios) {
  PK(id): SERIAL PRIMARY KEY
  --
  UK(username): VARCHAR(100) NOT NULL UNIQUE
  NN(password): VARCHAR(255) NOT NULL
  NN(rol): VARCHAR(50) NOT NULL
  NN(activo): BOOLEAN DEFAULT TRUE NOT NULL
  NN(created_at): TIMESTAMP DEFAULT NOW() NOT NULL
  NN(updated_at): TIMESTAMP DEFAULT NOW() NOT NULL
  ..
  <b>Constraints:</b>
  CHECK (rol IN ('jefe_carrera', 'bibliotecario', 'docente'))
  ..
  <b>Indices:</b>
  idx_usuarios_username (username)
  idx_usuarios_rol (rol)
}

TABLE(docentes) {
  PK(id): SERIAL PRIMARY KEY
  --
  FK(usuario_id): INTEGER UNIQUE NOT NULL
  UK(documento_identidad): BIGINT UNIQUE NOT NULL
  NN(nombre_completo): VARCHAR(255) NOT NULL
  UK(correo): VARCHAR(255) UNIQUE
  telefono: BIGINT
  NN(activo): BOOLEAN DEFAULT TRUE NOT NULL
  NN(created_at): TIMESTAMP DEFAULT NOW() NOT NULL
  NN(updated_at): TIMESTAMP DEFAULT NOW() NOT NULL
  ..
  <b>Constraints:</b>
  FOREIGN KEY (usuario_id) REFERENCES usuarios(id)
    ON DELETE CASCADE
  CHECK (documento_identidad > 0)
  CHECK (telefono IS NULL OR telefono > 0)
  ..
  <b>Indices:</b>
  idx_docentes_usuario_id (usuario_id)
  idx_docentes_documento_identidad (documento_identidad)
  idx_docentes_correo (correo)
}

TABLE(turnos) {
  PK(id): SERIAL PRIMARY KEY
  --
  UK(nombre): VARCHAR(100) UNIQUE NOT NULL
  NN(hora_inicio): TIME NOT NULL
  NN(hora_fin): TIME NOT NULL
  descripcion: TEXT
  NN(activo): BOOLEAN DEFAULT TRUE NOT NULL
  NN(created_at): TIMESTAMP DEFAULT NOW() NOT NULL
  NN(updated_at): TIMESTAMP DEFAULT NOW() NOT NULL
  ..
  <b>Constraints:</b>
  CHECK (hora_fin > hora_inicio)
  ..
  <b>Indices:</b>
  idx_turnos_nombre (nombre)
  idx_turnos_horario (hora_inicio, hora_fin)
}

TABLE(ambientes_academicos) {
  PK(id): SERIAL PRIMARY KEY
  --
  UK(codigo): VARCHAR(50) UNIQUE NOT NULL
  NN(nombre): VARCHAR(255) NOT NULL
  descripcion: VARCHAR(255)
  tipo_ambiente: VARCHAR(50)
  capacidad: INTEGER
  piso: INTEGER
  edificio: VARCHAR(50)
  NN(activo): BOOLEAN DEFAULT TRUE NOT NULL
  NN(created_at): TIMESTAMP DEFAULT NOW() NOT NULL
  NN(updated_at): TIMESTAMP DEFAULT NOW() NOT NULL
  ..
  <b>Constraints:</b>
  CHECK (capacidad IS NULL OR capacidad > 0)
  ..
  <b>Indices:</b>
  idx_ambientes_codigo (codigo)
  idx_ambientes_tipo (tipo_ambiente)
  idx_ambientes_edificio_piso (edificio, piso)
}

TABLE(llaves) {
  PK(id): SERIAL PRIMARY KEY
  --
  UK(codigo): VARCHAR(50) UNIQUE NOT NULL
  FK(ambiente_id): INTEGER NOT NULL
  NN(estado): VARCHAR(20) DEFAULT 'disponible' NOT NULL
  descripcion: TEXT
  NN(activo): BOOLEAN DEFAULT TRUE NOT NULL
  NN(created_at): TIMESTAMP DEFAULT NOW() NOT NULL
  NN(updated_at): TIMESTAMP DEFAULT NOW() NOT NULL
  ..
  <b>Constraints:</b>
  FOREIGN KEY (ambiente_id) REFERENCES ambientes_academicos(id)
    ON DELETE CASCADE
  CHECK (estado IN ('disponible', 'en_uso', 'extraviada', 'inactiva'))
  ..
  <b>Indices:</b>
  idx_llaves_codigo (codigo)
  idx_llaves_ambiente_id (ambiente_id)
  idx_llaves_estado (estado)
  idx_llaves_ambiente_estado (ambiente_id, estado)
}

TABLE(asignaciones_docente) {
  PK(id): SERIAL PRIMARY KEY
  --
  FK(docente_id): INTEGER NOT NULL
  FK(turno_id): INTEGER NOT NULL
  FK(ambiente_id): INTEGER NOT NULL
  FK(llave_id): INTEGER
  NN(fecha_inicio): DATE NOT NULL
  fecha_fin: DATE
  NN(activo): BOOLEAN DEFAULT TRUE NOT NULL
  NN(created_at): TIMESTAMP DEFAULT NOW() NOT NULL
  NN(updated_at): TIMESTAMP DEFAULT NOW() NOT NULL
  ..
  <b>Constraints:</b>
  FOREIGN KEY (docente_id) REFERENCES docentes(id)
    ON DELETE CASCADE
  FOREIGN KEY (turno_id) REFERENCES turnos(id)
    ON DELETE CASCADE
  FOREIGN KEY (ambiente_id) REFERENCES ambientes_academicos(id)
    ON DELETE CASCADE
  FOREIGN KEY (llave_id) REFERENCES llaves(id)
    ON DELETE SET NULL
  UNIQUE (docente_id, turno_id, ambiente_id, fecha_inicio)
  CHECK (fecha_fin IS NULL OR fecha_fin >= fecha_inicio)
  ..
  <b>Indices:</b>
  idx_asignaciones_docente_id (docente_id)
  idx_asignaciones_turno_id (turno_id)
  idx_asignaciones_ambiente_id (ambiente_id)
  idx_asignaciones_llave_id (llave_id)
  idx_asignaciones_fecha_inicio (fecha_inicio)
  idx_asignaciones_docente_fecha (docente_id, fecha_inicio)
}

TABLE(registros) {
  PK(id): SERIAL PRIMARY KEY
  --
  FK(docente_id): INTEGER NOT NULL
  FK(ambiente_id): INTEGER NOT NULL
  FK(turno_id): INTEGER NOT NULL
  FK(llave_id): INTEGER
  NN(tipo): VARCHAR(10) NOT NULL
  NN(fecha_hora): TIMESTAMP DEFAULT NOW() NOT NULL
  minutos_retraso: INTEGER DEFAULT 0
  minutos_extra: INTEGER DEFAULT 0
  observaciones: TEXT
  FK(editado_por): INTEGER
  NN(created_at): TIMESTAMP DEFAULT NOW() NOT NULL
  NN(updated_at): TIMESTAMP DEFAULT NOW() NOT NULL
  ..
  <b>Constraints:</b>
  FOREIGN KEY (docente_id) REFERENCES docentes(id)
    ON DELETE CASCADE
  FOREIGN KEY (ambiente_id) REFERENCES ambientes_academicos(id)
    ON DELETE CASCADE
  FOREIGN KEY (turno_id) REFERENCES turnos(id)
    ON DELETE CASCADE
  FOREIGN KEY (llave_id) REFERENCES llaves(id)
    ON DELETE SET NULL
  FOREIGN KEY (editado_por) REFERENCES usuarios(id)
    ON DELETE SET NULL
  CHECK (tipo IN ('ingreso', 'salida'))
  CHECK (minutos_retraso >= 0)
  CHECK (minutos_extra >= 0)
  ..
  <b>Indices:</b>
  idx_registros_docente_id (docente_id)
  idx_registros_ambiente_id (ambiente_id)
  idx_registros_turno_id (turno_id)
  idx_registros_tipo (tipo)
  idx_registros_fecha_hora (fecha_hora)
  idx_registros_docente_fecha (docente_id, fecha_hora)
}

' ==================== RELACIONES ====================

' Usuario -> Docente (1:1)
usuarios "1" -- "0..1" docentes : tiene >

' Ambiente -> Llaves (1:N)
ambientes_academicos "1" -- "0..*" llaves : posee >

' Docente -> Asignaciones (1:N)
docentes "1" -- "0..*" asignaciones_docente : tiene >

' Turno -> Asignaciones (1:N)
turnos "1" -- "0..*" asignaciones_docente : define >

' Ambiente -> Asignaciones (1:N)
ambientes_academicos "1" -- "0..*" asignaciones_docente : aloja >

' Llave -> Asignaciones (1:N)
llaves "1" -- "0..*" asignaciones_docente : asignada a >

' Docente -> Registros (1:N)
docentes "1" -- "0..*" registros : registra >

' Ambiente -> Registros (1:N)
ambientes_academicos "1" -- "0..*" registros : lugar de >

' Turno -> Registros (1:N)
turnos "1" -- "0..*" registros : durante >

' Llave -> Registros (1:N)
llaves "1" -- "0..*" registros : usa >

' Usuario -> Registros (1:N) - editado_por
usuarios "1" -- "0..*" registros : edita >

' ==================== NOTAS ====================

note top of usuarios
  <b>TABLA: usuarios</b>
  Almacena credenciales de acceso
  y roles del sistema.

  <b>Roles:</b>
  • jefe_carrera: Gestión completa
  • bibliotecario: Registros de ingreso/salida
  • docente: Consulta de horarios/registros

  <b>Password:</b> Hash bcrypt (costo 10)
  <b>Trigger:</b> Actualiza updated_at automáticamente
end note

note top of docentes
  <b>TABLA: docentes</b>
  Perfil docente vinculado a usuario.
  Relación 1:1 con usuarios.

  <b>ON DELETE CASCADE:</b>
  Si se elimina usuario, se elimina docente.

  <b>Validaciones:</b>
  • CI > 0
  • Teléfono > 0 (si existe)
end note

note top of turnos
  <b>TABLA: turnos</b>
  Define franjas horarias del día.

  <b>Validación:</b>
  hora_fin > hora_inicio

  <b>Ejemplo:</b>
  Mañana: 06:45 - 12:45
  Tarde: 12:45 - 18:45
end note

note top of ambientes_academicos
  <b>TABLA: ambientes_academicos</b>
  Aulas, laboratorios, bibliotecas, etc.

  <b>Código único:</b> Ej: B-16, L-01, 204
  <b>Capacidad:</b> Número de personas (opcional)
  <b>Ubicación:</b> Edificio + Piso
end note

note top of llaves
  <b>TABLA: llaves</b>
  Control de llaves por ambiente.

  <b>Estados:</b>
  • disponible: Lista para asignar
  • en_uso: Actualmente asignada
  • extraviada: Reportada como perdida
  • inactiva: Fuera de servicio

  <b>ON DELETE CASCADE:</b>
  Si se elimina ambiente, se eliminan llaves.
end note

note top of asignaciones_docente
  <b>TABLA: asignaciones_docente</b>
  Asignación Docente-Turno-Ambiente-Llave.
  Define quién trabaja dónde y cuándo.

  <b>Constraint UNIQUE:</b>
  (docente_id, turno_id, ambiente_id, fecha_inicio)
  Evita asignaciones duplicadas.

  <b>Vigencia temporal:</b>
  fecha_inicio: obligatoria
  fecha_fin: opcional (NULL = indefinida)

  <b>Llave opcional:</b>
  No todos los ambientes requieren llave.
  ON DELETE SET NULL si se elimina llave.
end note

note top of registros
  <b>TABLA: registros</b>
  Registro de ingresos y salidas diarias.

  <b>Tipos:</b>
  • ingreso: Entrada del docente
  • salida: Salida del docente

  <b>Cálculo automático:</b>
  • minutos_retraso: Diferencia con hora_inicio turno
  • minutos_extra: Tiempo adicional trabajado

  <b>Trazabilidad:</b>
  editado_por: Usuario que modificó el registro

  <b>Relaciones ON DELETE:</b>
  • CASCADE: docente, ambiente, turno
  • SET NULL: llave, editado_por
end note

note as leyenda
  <b>LEYENDA:</b>
  PK = Primary Key (rojo)
  FK = Foreign Key (azul)
  UK = Unique Key (verde)
  NN = Not Null (morado)

  <b>MOTOR:</b> PostgreSQL 15
  <b>CHARSET:</b> UTF8
  <b>TIMEZONE:</b> America/La_Paz
end note

@enduml
